--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "hipchat-notify",
   "description": "Send a message to a HipChat room.",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "author": "John Flesch <john@fles.ch> (http://fles.ch/)",
   "bugs": {
     "url": "https://github.com/flesch/hipchat-notify/issues"
   },
   "dependencies": {
-    "request": "^2.51.0",
-    "underscore": "^1.7.0"
+    "got": "^5.1.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.0.14",
+    "babel-preset-es2015": "^6.1.2"
   },
   "homepage": "https://github.com/flesch/hipchat-notify",
   "keywords": [
@@ -26,6 +29,7 @@
     "url": "https://github.com/flesch/hipchat-notify"
   },
   "scripts": {
+    "build": "babel index.js --out-file lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
