--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "url": "https://github.com/flesch/hipchat-notify/issues"
   },
   "dependencies": {
-    "got": "^5.1.0"
+    "got": "^5.2.1"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.0.14",
-    "babel-preset-es2015": "^6.1.2"
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13"
   },
   "homepage": "https://github.com/flesch/hipchat-notify",
   "keywords": [
