--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
   },
   "scripts": {
     "build": "babel index.js --out-file lib/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "babel-node tests/test.js"
   }
 }
